--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ kiwisolver==1.1.0
 lazy-object-proxy==1.4.2
 Markdown==3.1.1
 MarkupSafe==1.1.1
-matplotlib==3.1.1
+matplotlib~=3.4.3
 mccabe==0.6.1
 mistune==0.8.4
 more-itertools==7.2.0
@@ -49,10 +49,10 @@ nbconvert==5.6.1
 nbformat==4.4.0
 nltk==3.5
 notebook==6.0.2
-numpy==1.17.2
+numpy~=1.21.2
 oauthlib==3.1.0
 opt-einsum==3.1.0
-pandas==0.25.3
+pandas~=1.3.4
 pandocfilters==1.4.2
 parso==0.5.1
 pexpect==4.7.0
@@ -78,7 +78,7 @@ regex==2018.11.22
 requests==2.21.0
 requests-oauthlib==1.3.0
 rsa==4.0
-scikit-learn==0.22
+scikit-learn~=1.0.1
 scipy==1.3.1
 Send2Trash==1.5.0
 six==1.12.0
